--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Zero",
   "private": true,
   "scripts": {
-    "dev": "cross-env NUXT_HOST=0.0.0.0 NUXT_PORT=3000 NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NUXT_PORT=9001 NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
